restore name on stage on gitlab-ci

--- a/.gitlab/angular/angular-starter-bootstrap.yml
+++ b/.gitlab/angular/angular-starter-bootstrap.yml
@@ -5,10 +5,10 @@ stages:
   - test
   - build
 
-install:angular-starter-bootstrap:
+install:
   stage: install
   script:
-    - echo "📦 Installing dependencies for angular-starter-bootstrap"
+    - echo "Installing dependencies"
     - cd angular/01-angular-starter-bootstrap
     - npm ci
   cache:
@@ -23,29 +23,29 @@ install:angular-starter-bootstrap:
     - changes:
         - angular/01-angular-starter-bootstrap/**/*
 
-test:angular-starter-bootstrap:
+test:
   stage: test
   script:
-    - echo "🧪 Installing Chromium for headless tests"
+    - echo "Installing Chromium for headless tests"
     - apt-get update && apt-get install -y chromium
     - export CHROME_BIN=/usr/bin/chromium
     - cd angular/01-angular-starter-bootstrap
-    - echo "🧪 Running Angular unit tests in ChromeHeadless"
+    - echo "Running Angular unit tests in ChromeHeadless"
     - npm run test:ci
   dependencies:
-    - install:angular-starter-bootstrap
+    - install
   rules:
     - changes:
         - angular/01-angular-starter-bootstrap/**/*
 
-build:angular-starter-bootstrap:
+build:
   stage: build
   script:
-    - echo "🏗️ Building Angular app for production"
+    - echo "Building Angular app for production"
     - cd angular/01-angular-starter-bootstrap
     - npm run build --configuration=production
   dependencies:
-    - install:angular-starter-bootstrap
+    - install
   artifacts:
     paths:
       - angular/01-angular-starter-bootstrap/dist/
@@ -53,63 +53,6 @@ build:angular-starter-bootstrap:
   rules:
     - changes:
         - angular/01-angular-starter-bootstrap/**/*
-
-
-# image: node:20
-
-# stages:
-#   - install
-#   - test
-#   - build
-
-# install:
-#   stage: install
-#   script:
-#     - echo "Installing dependencies"
-#     - cd angular/01-angular-starter-bootstrap
-#     - npm ci
-#   cache:
-#     paths:
-#       - angular/01-angular-starter-bootstrap/node_modules/
-#     policy: pull-push
-#   artifacts:
-#     paths:
-#       - angular/01-angular-starter-bootstrap/node_modules/
-#     expire_in: 1h
-#   rules:
-#     - changes:
-#         - angular/01-angular-starter-bootstrap/**/*
-
-# test:
-#   stage: test
-#   script:
-#     - echo "Installing Chromium for headless tests"
-#     - apt-get update && apt-get install -y chromium
-#     - export CHROME_BIN=/usr/bin/chromium
-#     - cd angular/01-angular-starter-bootstrap
-#     - echo "Running Angular unit tests in ChromeHeadless"
-#     - npm run test:ci
-#   dependencies:
-#     - install
-#   rules:
-#     - changes:
-#         - angular/01-angular-starter-bootstrap/**/*
-
-# build:
-#   stage: build
-#   script:
-#     - echo "Building Angular app for production"
-#     - cd angular/01-angular-starter-bootstrap
-#     - npm run build --configuration=production
-#   dependencies:
-#     - install
-#   artifacts:
-#     paths:
-#       - angular/01-angular-starter-bootstrap/dist/
-#     expire_in: 1 week
-#   rules:
-#     - changes:
-#         - angular/01-angular-starter-bootstrap/**/*
 
 
 
