--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,7 @@
 stages: [install, test, build]
 
 include:
-  - local: .gitlab/angular/angular-starter-bootstrap.yml
+  # - local: .gitlab/angular/angular-starter-bootstrap.yml
   - local: .gitlab/angular/angular-starter.yml
   # - local: .gitlab/angular/01-angular-starter.yml
   # - local: .gitlab/node/backend-node.yml
