Change starter names

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,8 +1,5 @@
 stages: [install, test, build]
 
 include:
-  - local: .gitlab/angular/angular-starter-bootstrap.yml
-  - local: .gitlab/angular/angular-starter.yml
-  # - local: .gitlab/angular/01-angular-starter.yml
-  # - local: .gitlab/node/backend-node.yml
-  # - local: .gitlab/springboot/backend-springboot.yml
+  - local: .gitlab/angular/bootstrap.yml
+  - local: .gitlab/angular/starter.yml
