--- a/.gitlab/angular/bootstrap.yml
+++ b/.gitlab/angular/bootstrap.yml
@@ -5,44 +5,44 @@ stages:
   - test
   - build
 
-install:angular-starter-bootstrap:
+install:angular-bootstrap:
   stage: install
   script:
     - echo "Installing dependencies"
-    - cd angular/01-angular-starter-bootstrap
+    - cd angular/bootstrap
     - npm ci
   cache:
     paths:
-      - angular/01-angular-starter-bootstrap/node_modules/
+      - angular/bootstrap/node_modules/
     policy: pull-push
   artifacts:
     paths:
-      - angular/01-angular-starter-bootstrap/node_modules/
+      - angular/bootstrap/node_modules/
     expire_in: 1h
 
-test:angular-starter-bootstrap:
+test:angular-bootstrap:
   stage: test
   script:
     - echo "Installing Chromium for headless tests"
     - apt-get update && apt-get install -y chromium
     - export CHROME_BIN=/usr/bin/chromium
-    - cd angular/01-angular-starter-bootstrap
+    - cd angular/bootstrap
     - echo "Running Angular unit tests in ChromeHeadless"
     - npm run test:ci
   dependencies:
-    - install:angular-starter-bootstrap
+    - install:angular-bootstrap
 
-build:angular-starter-bootstrap:
+build:angular-bootstrap:
   stage: build
   script:
     - echo "Building Angular app for production"
-    - cd angular/01-angular-starter-bootstrap
+    - cd angular/bootstrap
     - npm run build --configuration=production
   dependencies:
-    - install:angular-starter-bootstrap
+    - install:angular-bootstrap
   artifacts:
     paths:
-      - angular/01-angular-starter-bootstrap/dist/
+      - angular/bootstrap/dist/
     expire_in: 1 week
 
 
@@ -58,15 +58,15 @@ build:angular-starter-bootstrap:
 #   stage: install
 #   script:
 #     - echo "Installing dependencies"
-#     - cd angular/01-angular-starter-bootstrap
+#     - cd angular/bootstrap
 #     - npm ci
 #   cache:
 #     paths:
-#       - angular/01-angular-starter-bootstrap/node_modules/
+#       - angular/bootstrap/node_modules/
 #     policy: pull-push
 #   artifacts:
 #     paths:
-#       - angular/01-angular-starter-bootstrap/node_modules/
+#       - angular/bootstrap/node_modules/
 #     expire_in: 1h
 
 # test:
@@ -75,7 +75,7 @@ build:angular-starter-bootstrap:
 #     - echo "Installing Chromium for headless tests"
 #     - apt-get update && apt-get install -y chromium
 #     - export CHROME_BIN=/usr/bin/chromium
-#     - cd angular/01-angular-starter-bootstrap
+#     - cd angular/bootstrap
 #     - echo "Running Angular unit tests in ChromeHeadless"
 #     - npm run test:ci
 #   dependencies:
@@ -85,11 +85,11 @@ build:angular-starter-bootstrap:
 #   stage: build
 #   script:
 #     - echo "Building Angular app for production"
-#     - cd angular/01-angular-starter-bootstrap
+#     - cd angular/bootstrap
 #     - npm run build --configuration=production
 #   dependencies:
 #     - install
 #   artifacts:
 #     paths:
-#       - angular/01-angular-starter-bootstrap/dist/
+#       - angular/bootstrap/dist/
 #     expire_in: 1 week
