--- a/.gitlab/angular/starter.yml
+++ b/.gitlab/angular/starter.yml
@@ -9,15 +9,15 @@ install:angular-starter:
   stage: install
   script:
     - echo "Installing dependencies"
-    - cd angular/01-angular-starter
+    - cd angular/starter
     - npm ci
   cache:
     paths:
-      - angular/01-angular-starter/node_modules/
+      - angular/starter/node_modules/
     policy: pull-push
   artifacts:
     paths:
-      - angular/01-angular-starter/node_modules/
+      - angular/starter/node_modules/
     expire_in: 1h
 
 test:angular-starter:
@@ -26,7 +26,7 @@ test:angular-starter:
     - echo "Installing Chromium for headless tests"
     - apt-get update && apt-get install -y chromium
     - export CHROME_BIN=/usr/bin/chromium
-    - cd angular/01-angular-starter
+    - cd angular/starter
     - echo "Running Angular unit tests in ChromeHeadless"
     - npm run test:ci
   dependencies:
@@ -36,11 +36,11 @@ build:angular-starter:
   stage: build
   script:
     - echo "Building Angular app for production"
-    - cd angular/01-angular-starter
+    - cd angular/starter
     - npm run build --configuration=production
   dependencies:
     - install:angular-starter
   artifacts:
     paths:
-      - angular/01-angular-starter/dist/
+      - angular/starter/dist/
     expire_in: 1 week
