Update dependencies on angular-starter

--- a/.gitlab/angular/starter.yml
+++ b/.gitlab/angular/starter.yml
@@ -19,6 +19,9 @@ install:angular-starter:
     paths:
       - angular/starter/node_modules/
     expire_in: 1h
+  rules:
+    - changes:
+        - angular/starter/**/*
 
 test:angular-starter:
   stage: test
@@ -31,6 +34,9 @@ test:angular-starter:
     - npm run test:ci
   dependencies:
     - install:angular-starter
+  rules:
+    - changes:
+        - angular/starter/**/*
 
 build:angular-starter:
   stage: build
@@ -44,3 +50,54 @@ build:angular-starter:
     paths:
       - angular/starter/dist/
     expire_in: 1 week
+  rules:
+    - changes:
+        - angular/starter/**/*
+
+
+# image: node:20
+
+# stages:
+#   - install
+#   - test
+#   - build
+
+# install:angular-starter:
+#   stage: install
+#   script:
+#     - echo "Installing dependencies"
+#     - cd angular/starter
+#     - npm ci
+#   cache:
+#     paths:
+#       - angular/starter/node_modules/
+#     policy: pull-push
+#   artifacts:
+#     paths:
+#       - angular/starter/node_modules/
+#     expire_in: 1h
+
+# test:angular-starter:
+#   stage: test
+#   script:
+#     - echo "Installing Chromium for headless tests"
+#     - apt-get update && apt-get install -y chromium
+#     - export CHROME_BIN=/usr/bin/chromium
+#     - cd angular/starter
+#     - echo "Running Angular unit tests in ChromeHeadless"
+#     - npm run test:ci
+#   dependencies:
+#     - install:angular-starter
+
+# build:angular-starter:
+#   stage: build
+#   script:
+#     - echo "Building Angular app for production"
+#     - cd angular/starter
+#     - npm run build --configuration=production
+#   dependencies:
+#     - install:angular-starter
+#   artifacts:
+#     paths:
+#       - angular/starter/dist/
+#     expire_in: 1 week
