--- a/.gitlab/angular/bootstrap.yml
+++ b/.gitlab/angular/bootstrap.yml
@@ -19,6 +19,9 @@ install:angular-bootstrap:
     paths:
       - angular/bootstrap/node_modules/
     expire_in: 1h
+  rules:
+    - changes:
+        - angular/bootstrap/**/*
 
 test:angular-bootstrap:
   stage: test
@@ -31,6 +34,9 @@ test:angular-bootstrap:
     - npm run test:ci
   dependencies:
     - install:angular-bootstrap
+  rules:
+    - changes:
+        - angular/bootstrap/**/*
 
 build:angular-bootstrap:
   stage: build
@@ -44,7 +50,9 @@ build:angular-bootstrap:
     paths:
       - angular/bootstrap/dist/
     expire_in: 1 week
-
+  rules:
+    - changes:
+        - angular/bootstrap/**/*
 
 
 # image: node:20
@@ -54,7 +62,7 @@ build:angular-bootstrap:
 #   - test
 #   - build
 
-# install:
+# install:angular-bootstrap:
 #   stage: install
 #   script:
 #     - echo "Installing dependencies"
@@ -69,7 +77,7 @@ build:angular-bootstrap:
 #       - angular/bootstrap/node_modules/
 #     expire_in: 1h
 
-# test:
+# test:angular-bootstrap:
 #   stage: test
 #   script:
 #     - echo "Installing Chromium for headless tests"
@@ -79,16 +87,16 @@ build:angular-bootstrap:
 #     - echo "Running Angular unit tests in ChromeHeadless"
 #     - npm run test:ci
 #   dependencies:
-#     - install
+#     - install:angular-bootstrap
 
-# build:
+# build:angular-bootstrap:
 #   stage: build
 #   script:
 #     - echo "Building Angular app for production"
 #     - cd angular/bootstrap
 #     - npm run build --configuration=production
 #   dependencies:
-#     - install
+#     - install:angular-bootstrap
 #   artifacts:
 #     paths:
 #       - angular/bootstrap/dist/
