--- a/.gitlab/angular/eslint.yml
+++ b/.gitlab/angular/eslint.yml
@@ -2,6 +2,7 @@ image: node:20
 
 stages:
   - install
+  - lint
   - test
   - build
 
@@ -19,6 +20,18 @@ install:angular-eslint:
     paths:
       - angular/eslint/node_modules/
     expire_in: 1h
+  rules:
+    - changes:
+        - angular/eslint/**/*
+
+lint:angular-eslint:
+  stage: lint
+  script:
+    - echo "Running ESLint"
+    - cd angular/eslint
+    - npm run lint
+  dependencies:
+    - install:angular-eslint
   rules:
     - changes:
         - angular/eslint/**/*
@@ -53,3 +66,60 @@ build:angular-eslint:
   rules:
     - changes:
         - angular/eslint/**/*
+
+
+# image: node:20
+
+# stages:
+#   - install
+#   - test
+#   - build
+
+# install:angular-eslint:
+#   stage: install
+#   script:
+#     - echo "Installing dependencies"
+#     - cd angular/eslint
+#     - npm ci
+#   cache:
+#     paths:
+#       - angular/eslint/node_modules/
+#     policy: pull-push
+#   artifacts:
+#     paths:
+#       - angular/eslint/node_modules/
+#     expire_in: 1h
+#   rules:
+#     - changes:
+#         - angular/eslint/**/*
+
+# test:angular-eslint:
+#   stage: test
+#   script:
+#     - echo "Installing Chromium for headless tests"
+#     - apt-get update && apt-get install -y chromium
+#     - export CHROME_BIN=/usr/bin/chromium
+#     - cd angular/eslint
+#     - echo "Running Angular unit tests in ChromeHeadless"
+#     - npm run test:ci
+#   dependencies:
+#     - install:angular-eslint
+#   rules:
+#     - changes:
+#         - angular/eslint/**/*
+
+# build:angular-eslint:
+#   stage: build
+#   script:
+#     - echo "Building Angular app for production"
+#     - cd angular/eslint
+#     - npm run build --configuration=production
+#   dependencies:
+#     - install:angular-eslint
+#   artifacts:
+#     paths:
+#       - angular/eslint/dist/
+#     expire_in: 1 week
+#   rules:
+#     - changes:
+#         - angular/eslint/**/*
