--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,3 +4,5 @@ include:
   - local: .gitlab/angular/starter.yml
   - local: .gitlab/angular/eslint.yml
   - local: .gitlab/angular/bootstrap.yml
+  - local: .gitlab/angular/ssr.yml
+  
