--- a/angular/ssr/package.json
+++ b/angular/ssr/package.json
@@ -8,7 +8,8 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "test:ci": "ng test --watch=false --browsers=ChromeHeadlessNoSandbox",
-    "coverage": "ng test --no-watch --code-coverage"
+    "coverage": "ng test --no-watch --code-coverage",
+    "serve": "node dist/angular-starter/server/server.mjs"
   },
   "prettier": {
     "printWidth": 100,
@@ -29,7 +30,10 @@
     "@angular/core": "20.3.1",
     "@angular/forms": "20.3.1",
     "@angular/platform-browser": "20.3.1",
+    "@angular/platform-server": "20.3.1",
     "@angular/router": "20.3.1",
+    "@angular/ssr": "^20.3.2",
+    "express": "^5.1.0",
     "rxjs": "7.8.2",
     "tslib": "2.8.1",
     "zone.js": "0.15.1"
@@ -38,7 +42,9 @@
     "@angular/build": "20.3.2",
     "@angular/cli": "20.3.2",
     "@angular/compiler-cli": "20.3.1",
+    "@types/express": "^5.0.1",
     "@types/jasmine": "5.1.9",
+    "@types/node": "^20.17.19",
     "jasmine-core": "5.10.0",
     "karma": "6.4.4",
     "karma-chrome-launcher": "3.2.0",
