--- a/springboot/checkstyle/pom.xml
+++ b/springboot/checkstyle/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.ganatan</groupId>
-	<artifactId>springboot-starter-checkstyle</artifactId>
+	<artifactId>springboot-checkstyle</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>springboot-starter-checkstyle</name>
+	<name>springboot-checkstyle</name>
 	<description>Demo project for Spring Boot</description>
 	<url/>
 	<licenses>
