Test github workflows

--- a/.github/workflows/angular-starter.yml
+++ b/.github/workflows/angular-starter.yml
@@ -1,13 +1,15 @@
-name: Angular Starter CI
+name: angular-starter
 
 on:
   push:
+    branches: [ master ]
     paths:
       - "angular/starter/**"
   pull_request:
+    branches: [ master ]
     paths:
       - "angular/starter/**"
-
+      
 jobs:
   install:
     runs-on: ubuntu-latest
