--- a/.gitlab/angular/angular-bootstrap.yml
+++ b/.gitlab/angular/angular-bootstrap.yml
@@ -4,6 +4,7 @@ stages:
   - install
   - test
   - build
+  - docker
 
 install:angular-bootstrap:
   stage: install
@@ -27,7 +28,6 @@ test:angular-bootstrap:
     - apt-get update && apt-get install -y chromium
     - export CHROME_BIN=/usr/bin/chromium
     - cd angular/angular-bootstrap
-    - echo "Running Angular unit tests in ChromeHeadless"
     - npm run test:ci
   dependencies:
     - install:angular-bootstrap
@@ -44,5 +44,72 @@ build:angular-bootstrap:
     paths:
       - angular/angular-bootstrap/dist/
     expire_in: 1 week
+
+docker:angular-bootstrap:
+  stage: docker
+  image: docker:latest
+  services:
+    - docker:dind
+  variables:
+    DOCKER_DRIVER: overlay2
+  script:
+    - echo "Building Docker image"
+    - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
+    - docker build -t $CI_REGISTRY_IMAGE/angular-bootstrap:$CI_COMMIT_SHA -f angular/angular-bootstrap/Dockerfile angular/angular-bootstrap
+    - docker push $CI_REGISTRY_IMAGE/angular-bootstrap:$CI_COMMIT_SHA
+    - docker tag $CI_REGISTRY_IMAGE/angular-bootstrap:$CI_COMMIT_SHA $CI_REGISTRY_IMAGE/angular-bootstrap:latest
+    - docker push $CI_REGISTRY_IMAGE/angular-bootstrap:latest
+  dependencies:
+    - build:angular-bootstrap
+  only:
+    - master
+
+
+# image: node:20
+
+# stages:
+#   - install
+#   - test
+#   - build
+
+# install:angular-bootstrap:
+#   stage: install
+#   script:
+#     - echo "Installing dependencies"
+#     - cd angular/angular-bootstrap
+#     - npm ci
+#   cache:
+#     paths:
+#       - angular/angular-bootstrap/node_modules/
+#     policy: pull-push
+#   artifacts:
+#     paths:
+#       - angular/angular-bootstrap/node_modules/
+#     expire_in: 1h
+
+# test:angular-bootstrap:
+#   stage: test
+#   script:
+#     - echo "Installing Chromium for headless tests"
+#     - apt-get update && apt-get install -y chromium
+#     - export CHROME_BIN=/usr/bin/chromium
+#     - cd angular/angular-bootstrap
+#     - echo "Running Angular unit tests in ChromeHeadless"
+#     - npm run test:ci
+#   dependencies:
+#     - install:angular-bootstrap
+
+# build:angular-bootstrap:
+#   stage: build
+#   script:
+#     - echo "Building Angular app for production"
+#     - cd angular/angular-bootstrap
+#     - npm run build --configuration=production
+#   dependencies:
+#     - install:angular-bootstrap
+#   artifacts:
+#     paths:
+#       - angular/angular-bootstrap/dist/
+#     expire_in: 1 week
 
 
