--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,4 @@
-stages: [install, test, build, deploy]
+stages: [install, test, build, docker]
 
 include:
   - local: .gitlab/angular/angular-bootstrap.yml
