Test docker stage

--- a/.gitlab/angular/angular-bootstrap.yml
+++ b/.gitlab/angular/angular-bootstrap.yml
@@ -8,13 +8,9 @@ docker:angular-bootstrap:
   script:
     - echo "🐳 Building Docker image"
     - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" "$CI_REGISTRY"
-    - docker build \
-        -t "$CI_REGISTRY_IMAGE/angular-bootstrap:$CI_COMMIT_SHA" \
-        -f angular/angular-bootstrap/docker/Dockerfile.frontend-angular \
-        angular/angular-bootstrap
+    - docker build -t "$CI_REGISTRY_IMAGE/angular-bootstrap:$CI_COMMIT_SHA" -f angular/angular-bootstrap/docker/Dockerfile.frontend-angular angular/angular-bootstrap
     - docker push "$CI_REGISTRY_IMAGE/angular-bootstrap:$CI_COMMIT_SHA"
-    - docker tag "$CI_REGISTRY_IMAGE/angular-bootstrap:$CI_COMMIT_SHA" \
-        "$CI_REGISTRY_IMAGE/angular-bootstrap:latest"
+    - docker tag "$CI_REGISTRY_IMAGE/angular-bootstrap:$CI_COMMIT_SHA" "$CI_REGISTRY_IMAGE/angular-bootstrap:latest"
     - docker push "$CI_REGISTRY_IMAGE/angular-bootstrap:latest"
 
 
