--- a/.gitlab/angular/angular-bootstrap.yml
+++ b/.gitlab/angular/angular-bootstrap.yml
@@ -53,7 +53,7 @@ docker:angular-bootstrap:
   variables:
     DOCKER_DRIVER: overlay2
   script:
-    - echo "🐳 Building Docker image"
+    - echo "Building Docker image"
     - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" "$CI_REGISTRY"
     - docker build -t "$CI_REGISTRY_IMAGE/angular-bootstrap:$CI_COMMIT_SHA" -f angular/angular-bootstrap/docker/Dockerfile.frontend-angular angular/angular-bootstrap
     - docker push "$CI_REGISTRY_IMAGE/angular-bootstrap:$CI_COMMIT_SHA"
