--- a/angular/angular-bootstrap/package.json
+++ b/angular/angular-bootstrap/package.json
@@ -17,7 +17,8 @@
     "docker:app-run": "docker run -d --name frontend-angular -p 4000:80 frontend-angular",
     "docker:app-stop": "docker stop frontend-angular && docker rm frontend-angular",
     "docker:app-clean": "docker rm -f frontend-angular && docker rmi -f frontend-angular",
-    "docker:app-logs": "docker logs -f frontend-angular"
+    "docker:app-logs": "docker logs -f frontend-angular",
+    "lint": "ng lint"
   },
   "prettier": {
     "printWidth": 100,
@@ -50,12 +51,15 @@
     "@angular/cli": "20.3.2",
     "@angular/compiler-cli": "20.3.1",
     "@types/jasmine": "5.1.9",
+    "angular-eslint": "20.3.0",
+    "eslint": "^9.35.0",
     "jasmine-core": "5.10.0",
     "karma": "6.4.4",
     "karma-chrome-launcher": "3.2.0",
     "karma-coverage": "2.2.1",
     "karma-jasmine": "5.1.0",
     "karma-jasmine-html-reporter": "2.1.0",
-    "typescript": "5.9.2"
+    "typescript": "5.9.2",
+    "typescript-eslint": "8.40.0"
   }
 }
