fix test on gar-connector-frontend-angular

--- a/rag-generator/frontend-angular/package.json
+++ b/rag-generator/frontend-angular/package.json
@@ -8,7 +8,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "test:headless": "ng test --watch=false --browsers=ChromeHeadless",
+    "test:ci": "ng test --watch=false --browsers=ChromeHeadlessNoSandbox",
     "coverage": "ng test --no-watch --code-coverage",
     "lint": "ng lint",
     "serve": "node server.js",
