--- a/rag-generator/backend-springboot/pom.xml
+++ b/rag-generator/backend-springboot/pom.xml
@@ -1,35 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
 <project xmlns="http://maven.apache.org/POM/4.0.0" 
      xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
      xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 
      http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  
   <modelVersion>4.0.0</modelVersion>
-
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
     <version>3.5.5</version>
-    <relativePath />
+		<relativePath />
   </parent>
-
-  <groupId>com.example</groupId>
+  <groupId>com.ganatan</groupId>
   <artifactId>backend-springboot</artifactId>
   <version>1.0.0</version>
   <name>backend-springboot</name>
   <description>Demo backend-springboot</description>
-
   <properties>
     <java.version>21</java.version>
     <qdrant.version>1.15.0</qdrant.version>
     <io.grpc.version>1.75.0</io.grpc.version>
     <jacoco-maven-plugin.version>0.8.13</jacoco-maven-plugin.version>
-    <maven.compiler.source>21</maven.compiler.source>
-    <maven.compiler.target>21</maven.compiler.target>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
-
   <dependencies>
     <dependency>
       <groupId>org.springframework.boot</groupId>
@@ -39,6 +31,10 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-test</artifactId>
       <scope>test</scope>
+    </dependency>
+    <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-webflux</artifactId>
     </dependency>
 	<dependency>
     	<groupId>io.qdrant</groupId>
@@ -60,9 +56,7 @@
 	    <artifactId>grpc-stub</artifactId>
 	    <version>${io.grpc.version}</version>
     </dependency>	
-	    
   </dependencies>
-
   <build>
     <plugins>
       <plugin>
