Test ci cd on angular with & without ssr

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,6 +2,7 @@ workflow:
   rules:
     - changes:
         - angular-bootstrap/**/*
+        - angular-ssr/**/*
         - rag-generator/frontend-angular/**/*
         - rag-generator/backend-springboot/**/*
     - when: never
@@ -16,6 +17,14 @@ trigger-angular-bootstrap:
   rules:
     - changes:
         - angular-bootstrap/**/*
+
+trigger-angular-ssr:
+  stage: trigger
+  trigger:
+    include: .gitlab/angular-ssr-ci.yml
+  rules:
+    - changes:
+        - angular-ssr/**/*
 
 trigger-rag-generator-frontend-angular:
   stage: trigger
