--- a/angular-ssr/package.json
+++ b/angular-ssr/package.json
@@ -8,17 +8,16 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "test:ci": "ng test --watch=false --browsers=ChromeHeadlessNoSandbox",
-    "ng:version": "ng --version",
     "coverage": "ng test --no-watch --code-coverage",
     "docker:list-containers": "docker ps -a",
     "docker:list-images": "docker images",
     "docker:list-volumes": "docker volume ls",
-    "docker:app-build": "docker build -t angular-bootstrap -f docker/Dockerfile.angular-bootstrap .",
-    "docker:app-run": "docker run -d --name angular-bootstrap -p 4000:80 angular-bootstrap",
-    "docker:app-stop": "docker stop angular-bootstrap && docker rm angular-bootstrap",
-    "docker:app-clean": "docker rm -f angular-bootstrap && docker rmi -f angular-bootstrap",
-    "docker:app-logs": "docker logs -f angular-bootstrap",
-    "lint": "ng lint"
+    "docker:app-build": "docker build -t angular-ssr -f docker/Dockerfile.angular-ssr .",
+    "docker:app-run": "docker run -d --name angular-ssr -p 4000:80 angular-ssr",
+    "docker:app-stop": "docker stop angular-ssr && docker rm angular-ssr",
+    "docker:app-clean": "docker rm -f angular-ssr && docker rmi -f angular-ssr",
+    "docker:app-logs": "docker logs -f angular-ssr",
+    "serve": "node dist/angular-starter/server/server.mjs"
   },
   "prettier": {
     "printWidth": 100,
@@ -39,9 +38,10 @@
     "@angular/core": "20.3.1",
     "@angular/forms": "20.3.1",
     "@angular/platform-browser": "20.3.1",
+    "@angular/platform-server": "20.3.1",
     "@angular/router": "20.3.1",
-    "@fortawesome/fontawesome-free": "7.0.1",
-    "bootstrap": "5.3.8",
+    "@angular/ssr": "^20.3.2",
+    "express": "^5.1.0",
     "rxjs": "7.8.2",
     "tslib": "2.8.1",
     "zone.js": "0.15.1"
@@ -50,16 +50,15 @@
     "@angular/build": "20.3.2",
     "@angular/cli": "20.3.2",
     "@angular/compiler-cli": "20.3.1",
+    "@types/express": "^5.0.1",
     "@types/jasmine": "5.1.9",
-    "angular-eslint": "20.3.0",
-    "eslint": "^9.35.0",
+    "@types/node": "^20.17.19",
     "jasmine-core": "5.10.0",
     "karma": "6.4.4",
     "karma-chrome-launcher": "3.2.0",
     "karma-coverage": "2.2.1",
     "karma-jasmine": "5.1.0",
     "karma-jasmine-html-reporter": "2.1.0",
-    "typescript": "5.9.2",
-    "typescript-eslint": "8.40.0"
+    "typescript": "5.9.2"
   }
 }
