--- a/.gitlab/angular-ssr-ci.yml
+++ b/.gitlab/angular-ssr-ci.yml
@@ -81,7 +81,7 @@ docker:angular-ssr:
   script:
     - echo "Building Docker image"
     - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" "$CI_REGISTRY"
-    - docker build -t "$CI_REGISTRY_IMAGE/angular-ssr:$CI_COMMIT_SHA" -f $PROJECT_DIR/docker/Dockerfile.frontend-angular $PROJECT_DIR
+    - docker build -t "$CI_REGISTRY_IMAGE/angular-ssr:$CI_COMMIT_SHA" -f $PROJECT_DIR/docker/Dockerfile.angular-ssr $PROJECT_DIR
     - docker push "$CI_REGISTRY_IMAGE/angular-ssr:$CI_COMMIT_SHA"
     - docker tag "$CI_REGISTRY_IMAGE/angular-ssr:$CI_COMMIT_SHA" "$CI_REGISTRY_IMAGE/angular-ssr:latest"
     - docker push "$CI_REGISTRY_IMAGE/angular-ssr:latest"
