--- a/rag-generator/frontend-angular/docker/Dockerfile.frontend-angular
+++ b/rag-generator/frontend-angular/docker/Dockerfile.frontend-angular
@@ -1,17 +1,18 @@
 FROM node:22 AS builder
+
 WORKDIR /app
 COPY package*.json ./
-RUN npm install
+RUN npm ci
 COPY . .
 RUN npm run build
 
-FROM nginx:stable-alpine
-WORKDIR /usr/share/nginx/html
+FROM node:22-alpine
 
-COPY --from=builder /app/dist/angular-starter/browser ./
+WORKDIR /app
+
+COPY --from=builder /app/dist/angular-starter /app/dist/angular-starter
+COPY package*.json ./
 
 EXPOSE 4000
 
-RUN sed -i 's/listen       80;/listen 4000;/' /etc/nginx/conf.d/default.conf
-
-CMD ["nginx", "-g", "daemon off;"]
+CMD ["node", "dist/angular-starter/server/server.mjs"]
