--- a/rag-generator/frontend-angular/package.json
+++ b/rag-generator/frontend-angular/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rag-connector-frontend",
-  "version": "20.3.2",
+  "version": "20.3.3",
   "scripts": {
     "ng": "ng",
     "dev": "ng serve --port 4200",
@@ -11,7 +11,6 @@
     "test:ci": "ng test --watch=false --browsers=ChromeHeadlessNoSandbox",
     "coverage": "ng test --no-watch --code-coverage",
     "lint": "ng lint",
-    "serve": "node server.js",
     "docker:list-containers": "docker ps -a",
     "docker:list-images": "docker images",
     "docker:list-volumes": "docker volume ls",
@@ -20,37 +19,42 @@
     "docker:app-stop": "docker stop frontend-angular && docker rm frontend-angular",
     "docker:app-clean": "docker rm -f frontend-angular && docker rmi -f frontend-angular",
     "docker:app-logs": "docker logs -f frontend-angular",
-    "generate-project-structure": "node tools/scripts/generate-project-structure.js"
+    "generate-project-structure": "node tools/scripts/generate-project-structure.js",
+    "serve": "node dist/angular-starter/server/server.mjs"
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "20.3.2",
-    "@angular/compiler": "20.3.2",
-    "@angular/core": "20.3.2",
-    "@angular/forms": "20.3.2",
-    "@angular/platform-browser": "20.3.2",
-    "@angular/router": "20.3.2",
-    "@fortawesome/fontawesome-free": "7.0.1",
+    "@angular/common": "20.3.3",
+    "@angular/compiler": "20.3.3",
+    "@angular/core": "20.3.3",
+    "@angular/forms": "20.3.3",
+    "@angular/platform-browser": "20.3.3",
+    "@angular/platform-server": "20.3.3",
+    "@angular/router": "20.3.3",
+    "@angular/ssr": "^20.3.4",
+    "@fortawesome/fontawesome-free": "7.1.0",
     "bootstrap": "5.3.8",
-    "express": "5.1.0",
+    "express": "^5.1.0",
     "rxjs": "7.8.2",
     "tslib": "2.8.1",
     "zone.js": "0.15.1"
   },
   "devDependencies": {
-    "@angular/build": "20.3.3",
-    "@angular/cli": "20.3.3",
-    "@angular/compiler-cli": "20.3.2",
+    "@angular/build": "20.3.4",
+    "@angular/cli": "20.3.4",
+    "@angular/compiler-cli": "20.3.3",
+    "@types/express": "^5.0.1",
     "@types/jasmine": "5.1.9",
+    "@types/node": "^20.17.19",
     "angular-eslint": "20.3.0",
-    "eslint": "9.36.0",
-    "jasmine-core": "5.11.0",
+    "eslint": "9.37.0",
+    "jasmine-core": "5.12.0",
     "karma": "6.4.4",
     "karma-chrome-launcher": "3.2.0",
     "karma-coverage": "2.2.1",
     "karma-jasmine": "5.1.0",
     "karma-jasmine-html-reporter": "2.1.0",
     "typescript": "5.8.3",
-    "typescript-eslint": "8.45.0"
+    "typescript-eslint": "8.46.0"
   }
 }
