--- a/.gitlab/rag-generator-frontend-angular-ci.yml
+++ b/.gitlab/rag-generator-frontend-angular-ci.yml
@@ -84,12 +84,12 @@ docker:frontend-angular:
   script:
     - echo "Building Docker image"
     - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" "$CI_REGISTRY"
-    - docker build -t "$CI_REGISTRY_IMAGE/rag-generator/frontend-angular:$CI_COMMIT_SHA" -f $PROJECT_DIR/docker/Dockerfile.frontend-angular $PROJECT_DIR
-    - docker push "$CI_REGISTRY_IMAGE/rag-generator/frontend-angular:$CI_COMMIT_SHA"
-    - docker tag "$CI_REGISTRY_IMAGE/rag-generator/frontend-angular:$CI_COMMIT_SHA" "$CI_REGISTRY_IMAGE/rag-generator/frontend-angular:latest"
-    - docker push "$CI_REGISTRY_IMAGE/rag-generator/frontend-angular:latest"
+    - docker build -t "$CI_REGISTRY_IMAGE/rag-generator-frontend-angular:$CI_COMMIT_SHA" -f $PROJECT_DIR/docker/Dockerfile.frontend-angular $PROJECT_DIR
+    - docker push "$CI_REGISTRY_IMAGE/rag-generator-frontend-angular:$CI_COMMIT_SHA"
+    - docker tag "$CI_REGISTRY_IMAGE/rag-generator-frontend-angular:$CI_COMMIT_SHA" "$CI_REGISTRY_IMAGE/rag-generator/frontend-angular:latest"
+    - docker push "$CI_REGISTRY_IMAGE/rag-generator-frontend-angular:latest"
 
-deploy:angular-ssr:
+deploy:frontend-angular:
   stage: deploy
   image:
     name: quay.io/openshift/origin-cli:latest
